--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+0.002   2023-02-01 Bruno Ramos
+--------
+    - Fix hours mode
+    - Small improvements
+
 0.001   2023-01-29 Bruno Ramos
 --------
     - Initial release
