--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for {{$dist->name}}
 
 0.003     2023-02-01 17:12:35 CET (TRIAL RELEASE)
     - Fix Changes format
+    - Add better test for hours mode using Test::Directory
 
 0.002     2023-02-01 17:05:26 CET (TRIAL RELEASE)
     - Fix hours mode
