--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    - Depend on perl 5.020
+    - Add File::Find::Rule test dependency
 
 0.007     2023-02-14 23:11:23 CET
     - Add Small, Medium and Large skins
