--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
-    - Depend on perl 5.020
+    - Depend on Perl 5.020
     - Add File::Find::Rule test dependency
 
 0.007     2023-02-14 23:11:23 CET
