--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
     - Depend on Perl 5.020
     - Add File::Find::Rule test dependency
+    - Indent pod code with spaces in Gantt.pm
 
 0.007     2023-02-14 23:11:23 CET
     - Add Small, Medium and Large skins
